# fc3-admin-catalogo-de-videos-python

./: .gitignore  Dockerfile  docker-compose.override.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/zsh/powerlevel10k/: .p10k.zsh
src/__seedwork/domain/: entities.py  exceptions.py  repository.py  validators.py  value_objects.py
src/__seedwork/tests/integration/domain/: test_int_validators.py
src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_validators.py  test_unit_value_objects.py
src/category/domain/: entities.py  exceptions.py  repositories.py  validators.py
src/category/infra/: repositories.py
src/category/tests/integration/: test_int_entities.py  test_int_validators.py
src/category/tests/unit/domain/: test_unit_entities.py
src/category/tests/unit/infra/: test_unit_repositories.py
