
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Vinícius Gonçalves Roque", email = "vinicius.g.roque@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.0.2",
    "pylint>=2.17.4",
    "pytest>=7.3.1",
]
